# llm-gpu-fit

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  data-refresh.yml  deploy-space.yml
data/: gpus.yaml  presets.yaml  use_cases.yaml
data/seed/: benchmarks.parquet  models.parquet
docs/: spec.md
llm_gpu_fit/collectors/: base.py  huggingface_hub.py
llm_gpu_fit/core/: data.py  memory.py  recommender.py  topology.py  types.py  usecases.py
llm_gpu_fit/ui/: catalog.py  matrix.py  results.py  wizard.py
scripts/: refresh_data.py  seed_data.py
tests/: test_collectors_base.py  test_data_gpus.py  test_integration.py  test_memory.py  test_recommender.py  test_topology.py  test_types.py  test_usecases.py
