[project]
name = "llm-gpu-fit"
version = "0.1.0"
description = "GPU 구성별 LLM 추론 모델 추천 계산기"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.0",
    "huggingface-hub>=0.30",
    "pandas>=2.2",
    "pyarrow>=18",
    "duckdb>=1.1",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "pydantic>=2.9",
    "datasets>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_gpu_fit"]
